--- a/HotelMangmentSystem/Staff/templates/Staff/Staff_view.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/Staff_view.html
@@ -4,6 +4,13 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'Staff/Staff_view.css'  %}">
 {% endblock %}
+{% block search_input %}
+    <form class="form-inline my-2 my-lg-0" method="get" action="">
+        {% csrf_token %}
+      <input class="form-control mr-sm-2" type="search" placeholder="Search by Staff Name" name="q" value="{{ request.Get.q }}">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+{% endblock %}
 {% block body %}
 
 
