--- a/HotelMangmentSystem/Staff/templates/Staff/base.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/base.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <title>{% block title %} {% endblock %}</title>
-    {% block staticfiles %}
 
-    {% endblock %}
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,6 +13,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     {% block script %} {% endblock %}
+    {% block staticfiles %}
+
+    {% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,10 +26,10 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
+      <li class="nav-item ">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'Staff_view' %}">Staff</a>
       </li>
       <li class="nav-item">
@@ -36,13 +37,19 @@
       </li>
     </ul>
     <ul class="navbar-nav navbar  ">
-      <li class="nav-item"><a style="font-size: 18px;color: #28a745" class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        {% if request.user.is_authenticated  %}
+            <li class="nav-item dropdown">
+                <a style="font-size: 18px;color: #28a745" class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">{{ user.username }} </a>
+                <div class="dropdown-menu" style="background-color: #444444;" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" style="color: #28a745;" href="{% url 'User_logout' %}">Log out</a>
+                </div>
+            </li>
+        {% else %}
+            <li class="nav-item"><a style="font-size: 18px;color: #28a745" class="nav-link" href="{% url 'Receptionist_login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></li>
+        {% endif %}
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-
+    {% block search_input  %}
+    {% endblock %}
   </div>
 </nav>
 
