--- a/HotelMangmentSystem/ownerAdmin/templates/ownerAdmin/base.html
+++ b/HotelMangmentSystem/ownerAdmin/templates/ownerAdmin/base.html
@@ -31,7 +31,7 @@
         <li><a href="{% url 'admin_login' %}">Home</a></li>
         <li><a href="{% url 'rooms_admin' %}">Rooms</a></li>
         <li><a href="#">Finance</a></li>
-        <li><a href="#">Staff</a></li>
+        <li><a href="{% url 'Staff_view' %}">Staff</a></li>
         <li><a href="#">Customers</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
