--- a/HotelMangmentSystem/Staff/static/Staff/Staff_view.css
+++ b/HotelMangmentSystem/Staff/static/Staff/Staff_view.css
@@ -15,7 +15,19 @@ a:-webkit-any-link {
     cursor: pointer;
     text-decoration: none;
 }
+
 .time{
     color: #557ECC;
     font-weight: bold;
+}
+.card .card-body p {
+    float: left;
+}
+.card .card-body button{
+    float: right;
+    margin: 5px;
+}
+.card .card-body button a{
+    text-decoration: none;
+    color: #FFFF;
 }
