--- a/HotelMangmentSystem/Staff/templates/Staff/Staff_view.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/Staff_view.html
@@ -1,9 +1,20 @@
 {% extends 'Staff/base.html' %}
+
+
 {% block title %}Staff{% endblock %}
 {% block staticfiles %}
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'Staff/Staff_view.css'  %}">
 {% endblock %}
+
+{% block create_staff %}
+    {% if request.user.is_authenticated  and  user.is_superuser %}
+        <li class="nav-link">
+            <a  style="font-size:18px;color:#28a745;" href="#"><span class="glyphicon glyphicon-plus"></span> Create Staff</a>
+        </li>
+    {% endif %}
+{% endblock %}
+
 {% block search_input %}
     <form class="form-inline my-2 my-lg-0" method="get" action="">
         {% csrf_token %}
@@ -27,7 +38,10 @@
                       <h5 class="card-title"><a href="{% url 'Staff_list' staff_team %}">{{ staff_team.Name }}</a></h5>
                       <p class="card-text"><small class="text-muted">Last updated at <span class="time">{{ staff_team.employee_set.latest.time }}</span></small></p>
 
-
+                    {% if request.user.is_authenticated  and  user.is_superuser%}
+                        <button class="btn btn-primary"><a href="#">Edit</a></button>
+                        <button class="btn btn-primary"><a href="#">Delete</a></button>
+                    {% endif %}
 
                     </div>
                  </div>
