--- a/HotelMangmentSystem/Staff/templates/Staff/base.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/base.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="{% url 'rooms_admin' %}">Rooms</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#">Finance</a>
+              <a class="nav-link" href="{% url 'finance_edit' %}">Finance</a>
              </li>
         {% endif %}
       <li class="nav-item active">
