--- a/HotelMangmentSystem/ownerAdmin/templates/ownerAdmin/base.html
+++ b/HotelMangmentSystem/ownerAdmin/templates/ownerAdmin/base.html
@@ -30,7 +30,7 @@
     <ul class="nav navbar-nav" >
         <li><a href="{% url 'admin_login' %}">Home</a></li>
         <li><a href="{% url 'rooms_admin' %}">Rooms</a></li>
-        <li><a href="#">Finance</a></li>
+        <li><a href="{% url 'finance_edit' %}">Finance</a></li>
         <li><a href="{% url 'Staff_view' %}">Staff</a></li>
         <li><a href="#">Customers</a></li>
     </ul>
