--- a/HotelMangmentSystem/Staff/templates/Staff/employee_delete.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/employee_delete.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
        <div class="container"></div>
         <div class="text-center">
-            <h2>Are you sure you want to delete {{ staff_name }} Staff Category ?</h2>
+            <h2>Are you sure you want to delete {{ employee_name }} ?</h2>
         </div>
         <div class="text-center" >
             <input type="submit" value="Delete" name="delete" class="btn btn-danger">
