--- a/HotelMangmentSystem/Staff/templates/Staff/emplyee_edit.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/emplyee_edit.html
@@ -1,6 +1,6 @@
 {% extends 'Staff/base.html' %}
 {% load staticfiles %}
-{% block title %}Edit Staff{% endblock %}
+{% block title %}Edit Employee{% endblock %}
 
 {% block body %}
     <div class="container">
