--- a/HotelMangmentSystem/Staff/templates/Staff/Staff_list.html
+++ b/HotelMangmentSystem/Staff/templates/Staff/Staff_list.html
@@ -4,6 +4,13 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'Staff/Staff_List.css' %}">
 {% endblock %}
+{% block create_staff %}
+    {% if request.user.is_authenticated  and  user.is_superuser %}
+        <li class="nav-link">
+            <a  style="font-size:18px;color:#28a745;" href="{% url 'add_employee' staff_name%}"><span class="glyphicon glyphicon-plus"></span> Add Employee</a>
+        </li>
+    {% endif %}
+{% endblock %}
 {% block script %}
 
     <script>
@@ -24,6 +31,15 @@
     </script>
 {% endblock %}
 
+{% block add_employee %}
+    {% if request.user.is_authenticated  and  user.is_superuser %}
+        <li class="nav-link">
+            <a  style="font-size:18px;color:#28a745; text-decoration: none" href="#"><span class="glyphicon glyphicon-plus"></span> Add Employee</a>
+        </li>
+    {% endif %}
+{% endblock %}
+
+
 {% block search_input %}
     <form class="form-inline my-2 my-lg-0" method="get" action="">
         {% csrf_token %}
@@ -38,6 +54,13 @@
             {% for employee in staff_team %}
                 <div class="content col-12">
                     <img class="img-responsive" src="{{ employee.profile_pic.url }}">
+
+                    {% if request.user.is_authenticated  and  user.is_superuser  %}
+                        <button class="btn btn-primary"><a href="{% url 'edit_employee' staff_name employee.Name %}">Edit</a></button>
+                        <button class="btn btn-primary"><a href="{% url 'delete_employee' staff_name employee.Name %}">Delete</a></button>
+                    {% endif %}
+
+
                     <div class="details ">
                         <span>Name: {{ employee.Name }}</span>
                         {% if request.user.is_authenticated  and not user.is_superuser%}
@@ -49,7 +72,7 @@
                                 <option>Online</option>
                                 <option>Offline</option>
                               </select>
-                              <button type="submit" class="btn btn-primary">Save</button>
+                              <button type="submit" class="btn btn-primary save">Save</button>
                             </form>
                             <div class="clear-fix"></div>
                         {% else %}
