--- a/HotelMangmentSystem/booking/templates/Booking.html
+++ b/HotelMangmentSystem/booking/templates/Booking.html
@@ -4,8 +4,8 @@
 <head>
 	<title>search</title>
     {% load staticfiles %}
-	 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css'%}">
-   	<link rel="stylesheet" type="text/css" href="{% static 'booking.css'%}">
+	 <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
+   	<link rel="stylesheet" type="text/css" href="{% static 'Atef.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,7 +15,7 @@
 		<form id="searchform" action="{% url 'search' %}" method="get" accept-charset="utf-8" >
 			<div class="container-fluid">
 			<div class="row">
-			
+
 				<div class="col-lg-3 col-md-6 col-xs-12 ">
 				<div class="block1">
                     <p>room_types</p>
@@ -29,7 +29,7 @@
              </select>
 				</div>
 				</div>
-		
+
 				<div class="col-lg-3 col-md-6 col-xs-12 ">
 
 					<div class="block1">
@@ -38,16 +38,16 @@
 					</div>
 				</div>
 
-				
-				<div class="col-lg-3 col-md-6 col-xs-12 ">	
-					
+
+				<div class="col-lg-3 col-md-6 col-xs-12 ">
+
 					<div class="block1">
 						<p>CHECK-OUT</p>
 					    <input type="date" name="checkout">
 					</div>
-		
+
 				</div>
-				
+
 				<div class="col-lg-3 col-md-6 col-xs-12 ">
 
 
@@ -60,23 +60,22 @@
 </div>
 
 <div class="page">
-	
-	<div class="container-fluid">
-			<div class="row">
-				{% for room in room_type_filter %}
 
-                <div class="col-lg-4 col-md-6 col-xs-12 ">
+
+			<div class="row">
+
+                {% for room in room_type_filter %}
+            <div class="col-lg-4 col-md-6 col-xs-12 ">
+                	<h2><a href="form?room={{room.room_type}}">{{room.room_type}} </a></h2>
 					<div class="page1" >
-                        <h1><a href="form?room={{room.room_type}}">{{room.room_type}} </a></h1>
-						<img href="form?room={{room.room_type}}" src="{{room.room_image.url}}"  >
+						<a href="form?room={{room.room_type}}"><img src="{{room.room_image.url}}"></a>
 						<ul>
 							<li>{{room.room_beds}}" beds </li>
 							<li>{{room.room_view}} view</li>
 						</ul>
 					</div>
 				</div>
-
-                {% endfor %}
+                  {% endfor %}
 </div>
 </div>
 </div>
